// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A FieldToggleSwitch 1`] = `
.c6 {
  background: #FFFFFF;
  border-radius: 50%;
  bottom: 0.125rem;
  height: 1rem;
  left: 0.125rem;
  position: absolute;
  -webkit-transition: 300ms;
  transition: 300ms;
  width: 1rem;
}

.c5 {
  background: #C1C6CC;
  border-radius: 1.25rem;
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  -webkit-transition: 300ms;
  transition: 300ms;
}

.c4 {
  display: inline-block;
  height: 1.25rem;
  position: relative;
  vertical-align: middle;
  width: 2.1875rem;
}

.c4 input {
  cursor: pointer;
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 1;
}

.c4 input:focus + div {
  box-shadow: 0 0 0 0.2rem rgba(122,85,227,0.4);
}

.c2 {
  color: #343C42;
  font-size: 0.75rem;
  font-weight: 600;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-template-areas: 'input label detail' '. messages messages';
  grid-template-columns: repeat(2,max-content) 1fr;
  line-height: 1.25rem;
}

.c0 .c3 {
  grid-area: input;
}

.c0 .c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: normal;
  grid-area: label;
  padding-left: 0.5rem;
}

.c0 .FieldInline__FieldDetail-kl4qjf-1 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: detail;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-left: 0.25rem;
}

.c0 .c7 {
  grid-area: messages;
  padding-left: 0.75rem;
}

<label
  className="c0 "
  htmlFor="FieldToggleSwitchID"
>
  <span
    className="c1 c2"
  >
    👍
  </span>
  <div
    className="c3 "
  >
    <div
      className="c4 "
    >
      <input
        aria-describedby="FieldToggleSwitchID-describedby"
        id="FieldToggleSwitchID"
        role="switch"
        type="checkbox"
      />
      <div
        className="c5"
      >
        <div
          className="c6"
        />
      </div>
    </div>
  </div>
  <div
    className="c7 "
    id="FieldToggleSwitchID-describedby"
  />
</label>
`;

exports[`A FieldToggleSwitch turned on 1`] = `
.c6 {
  background: #FFFFFF;
  border-radius: 50%;
  bottom: 0.125rem;
  height: 1rem;
  left: 0.125rem;
  position: absolute;
  -webkit-transform: translateX(0.9375rem);
  -ms-transform: translateX(0.9375rem);
  transform: translateX(0.9375rem);
  -webkit-transition: 300ms;
  transition: 300ms;
  width: 1rem;
}

.c5 {
  background: #6C43E0;
  border-radius: 1.25rem;
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  -webkit-transition: 300ms;
  transition: 300ms;
}

.c4 {
  display: inline-block;
  height: 1.25rem;
  position: relative;
  vertical-align: middle;
  width: 2.1875rem;
}

.c4 input {
  cursor: pointer;
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 1;
}

.c4 input:focus + div {
  box-shadow: 0 0 0 0.2rem rgba(122,85,227,0.4);
}

.c2 {
  color: #343C42;
  font-size: 0.75rem;
  font-weight: 600;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-template-areas: 'input label detail' '. messages messages';
  grid-template-columns: repeat(2,max-content) 1fr;
  line-height: 1.25rem;
}

.c0 .c3 {
  grid-area: input;
}

.c0 .c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: normal;
  grid-area: label;
  padding-left: 0.5rem;
}

.c0 .FieldInline__FieldDetail-kl4qjf-1 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: detail;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-left: 0.25rem;
}

.c0 .c7 {
  grid-area: messages;
  padding-left: 0.75rem;
}

<label
  className="c0 "
  htmlFor="FieldToggleSwitchID"
>
  <span
    className="c1 c2"
  >
    👍
  </span>
  <div
    className="c3 "
  >
    <div
      className="c4 "
    >
      <input
        aria-checked={true}
        aria-describedby="FieldToggleSwitchID-describedby"
        checked={true}
        id="FieldToggleSwitchID"
        role="switch"
        type="checkbox"
      />
      <div
        className="c5"
      >
        <div
          className="c6"
        />
      </div>
    </div>
  </div>
  <div
    className="c7 "
    id="FieldToggleSwitchID-describedby"
  />
</label>
`;
